<resources>
    <string name="app_name">巨有</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">请输入手机号码</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_securitycode">请输入验证码</string>
    <string name="get_securitycode">获取验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="password_sign_in">密码登录</string>
    <string name="phone_sign_in">短信验证码登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="other_sign">其它登录方式</string>
    <string name="local_merchants">本地商家</string>
    <string name="nearby_shops">本地商家</string>
    <string name="more_shops">更多商家</string>
    <string name="application_in">申请入驻</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_base">BaseActivity</string>

    <integer-array  name="merchants_type_icons">
        <item>@mipmap/icon_sccy</item>
        <item>@mipmap/icon_fscd</item>
        <item>@mipmap/icon_jzry</item>
        <item>@mipmap/icon_jttx</item>
        <item>@mipmap/icon_jypx</item>
        <item>@mipmap/icon_sysw</item>
        <item>@mipmap/icon_ylbj</item>
        <item>@mipmap/icon_other</item>
    </integer-array >
    <!--<string-array name="merchants_type_icons">-->
        <!--<item>@</item>-->
    <!--</string-array>-->
</resources>
